syntax = "proto3";

package GddsStreaming;

message GddsMessage {
    string ip = 1;
    string veh = 2;
    int64 tm = 3;
    double lat = 4;
    double lon = 5;
    double hdg = 6;
    double spd = 7;
    int32 trnTyp = 8;
    string msg = 9;
    int64 svrtm = 10;
}

message SubscriptionRequest {
    string clientId = 1;
}

message Cache-Control: no-cache
Content-Type: application/octet-stream

message GenerateClientIdRequest {
}

message GenerateClientIdResponse {
    string clientId = 1;
}

service GddsStreamService {
    rpc Subscribe(SubscriptionRequest) returns (stream GddsMessage);
    rpc Terminate(TerminationRequest) returns (TerminationResponse);
    rpc GenerateClientId(GenerateClientIdRequest) returns (GenerateClientIdResponse);
}

message TerminationResponse {
    bool success = 1;
}